kubernetes/apps/authentik/authentik/app/ingress-forward-auth.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: authentik-outpost
  namespace: authentik
spec:
  hosts:
    - outpost.${SECRET_DOMAIN}
  gateways:
    - istio-ingress/external-gateway
  http:
    - match:
        - uri:
            prefix: /outpost.goauthentik.io
      route:
        - destination:
            host: ak-outpost-authentik-embedded-outpost.authentik.svc.cluster.local
            port:
              number: 9000
