kubernetes/apps/authentik/authentik/app/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: authentik
  namespace: authentik
spec:
  hosts: ["authentik.${SECRET_DOMAIN}"]
  gateways: [istio-ingress/external-gateway]
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: authentik-server.authentik.svc.cluster.local
            port:
              number: 443
