kubernetes/apps/authentik/authentik/app/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: authentik-server
  namespace: authentik
spec:
  hosts:
    - auth.${SECRET_DOMAIN}
  gateways:
    - istio-ingress/external-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: authentik-server.authentik.svc.cluster.local
            port:
              number: 80
